# typeddict-validator

./: .gitignore  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
typeddict_validator/: __init__.py  validate.py  validate_test.py
validate/: __init__.py  validate.py  validate_test.py
