[tool.poetry]
name = "typeddict-validator"
version = "0.0.0"
description = "Validates Python's TypedDict"
authors = ["Sogo Kato <sogokato@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typing_extensions = { version = "^4.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "typeddict-validator"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = []
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "typeddict_validator.__version__"}
readme = {file = ["README.rst"]}
